--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <span id="priceDisplay"></span>
     <button id="renderBtn">Render Canvas</button>
     <button id="undoBtn">Undo</button>
+    <button id="cropBtn">Crop</button>     
     <button id="exportBtn">Export (SVG)</button>
   </div>
   <div id="fileInputContainer" style="display:none; margin-top:1em;">
