--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .controls { display: flex; flex-wrap: wrap; gap: 1rem; align-items: center; }
     .controls label { flex: 1 1 120px; white-space: nowrap; }
     canvas { display: block; margin-top: 1em; border: 1px solid #ccc; }
-    #svgList { list-style: none; padding: 0; margin-top: 1em; max-width: 400px; }
+    #svgList { list-style: none; padding: 0; margin-top: 1em; }
     #svgList li { display: flex; align-items: center; justify-content: space-between; padding: 0.3em; border-bottom: 1px solid #eee; }
     #svgList li.selected { background: #def; }
     .item-controls { display: flex; gap: 0.5em; }
