--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     <button id="undoBtn">Undo</button>
     <button id="cropBtn">Crop</button>     
     <button id="exportBtn">Export (SVG)</button>
+    <label for="fontSelect">Font:</label>
+    <select id="fontSelect">
+    <option value="Arial">Arial</option>
+    <option value="Verdana">Verdana</option>
+    <option value="Times New Roman">Times New Roman</option>
+    <option value="Courier New">Courier New</option>
+    </select>
+    <button id="textBtn">Generate Text</button>
   </div>
   <div id="fileInputContainer" style="display:none; margin-top:1em;">
     <input type="file" id="fileInput" accept=".svg" multiple>
