--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <option value="Verdana">Verdana</option>
     <option value="Times New Roman">Times New Roman</option>
     <option value="Courier New">Courier New</option>
+    <option value="Georgia">Georgia</option>
+    <option value="Palatino Linotype">Palatino Linotype</option>
+    <option value="Tahoma">Tahoma</option>
+    <option value="Roboto">Roboto</option>
     </select>
     <button id="textBtn">Generate Text</button>
   </div>
