--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SVG Preview Widget</title>
   <link rel="stylesheet" href="styles.css">
+  <link
+  href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+  rel="stylesheet">
   <style>
     .controls { display: flex; flex-wrap: wrap; gap: 1rem; align-items: center; }
     .controls label { flex: 1 1 120px; white-space: nowrap; }
