--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <option value="Palatino Linotype">Palatino Linotype</option>
     <option value="Tahoma">Tahoma</option>
     <option value="Roboto">Roboto</option>
+    <option value="Lato">Lato</option>
+    <option value="Montserrat">Montserrat</option>
     </select>
     <button id="textBtn">Generate Text</button>
   </div>
