--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
     <option value="Lato">Lato</option>
     <option value="Montserrat">Montserrat</option>
     </select>
+
+        <!-- New: Font size picker -->
+    <label for="fontSizeInput">Size:</label>
+    <input
+      type="number"
+      id="fontSizeInput"
+      value="48"
+      min="8"
+      max="200"
+      style="width: 4rem;"
+    />
+    
     <button id="textBtn">Generate Text</button>
   </div>
   <div id="fileInputContainer" style="display:none; margin-top:1em;">
