--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       max="200"
       style="width: 4rem;"
     />
+
+    <input
+  type="range"
+  id="scaleSlider"
+  min="10"           <!-- 10% -->
+  max="400"          <!-- 400% -->
+  value="100"        <!-- default 100% -->
+  step="1"
+/>
     
     <button id="textBtn">Generate Text</button>
   </div>
