--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
       style="width: 4rem;"
     />
 
-    <input
-      type="range"
-      id="scaleSlider"
-      min="10"           <!-- 10% -->
-      max="400"          <!-- 400% -->
-      value="100"        <!-- default 100% -->
-      step="1"
-    />
+<label for="scaleSlider">Scale (10 %–400 %):</label>
+<input
+  type="range"
+  id="scaleSlider"
+  min="10"
+  max="400"
+  value="100"
+  step="1"
+/>
     
     <button id="textBtn">Generate Text</button>
   </div>
